@@ -18,15 +18,17 @@ import com.nhl.link.etl.runtime.task.sourcekeys.SourceKeysTask;
  */
 public class MissingTargetsFilterStage<T> {
 
+	public static final String SOURCE_KEYS_KEY = MissingTargetsFilterStage.class.getName() + ".SOURCE_KEYS";
+
 	private EtlTask keysSubtask;
 
 	public MissingTargetsFilterStage(EtlTask keysSubtask) {
 		this.keysSubtask = keysSubtask;
 	}
 
-	public List<T> filterMissing(ObjectContext context, Map<Object, T> mappedTargets) {
+	public List<T> filterMissing(Execution parentExec, ObjectContext context, Map<Object, T> mappedTargets) {
 
-		Set<Object> sourceKeys = sourceKeys();
+		Set<Object> sourceKeys = sourceKeys(parentExec);
 		List<T> matched = new ArrayList<>();
 
 		for (Entry<Object, T> e : mappedTargets.entrySet()) {
@@ -39,10 +41,23 @@ public class MissingTargetsFilterStage<T> {
 	}
 
 	@SuppressWarnings("unchecked")
-	private Set<Object> sourceKeys() {
-		// TODO: per-Execution caching...
+	private Set<Object> sourceKeys(Execution parentExec) {
 
+		// cache keys in parent execution...
+		Set<Object> keys = (Set<Object>) parentExec.getAttribute(SOURCE_KEYS_KEY);
+		if (keys == null) {
+			keys = loadKeys(parentExec);
+			parentExec.setAttribute(SOURCE_KEYS_KEY, keys);
+		}
+
+		return keys;
+	}
+
+	@SuppressWarnings("unchecked")
+	private Set<Object> loadKeys(Execution parentExec) {
 		Execution exec = keysSubtask.run();
+
+		parentExec.getStats().incrementExtracted(exec.getStats().getExtracted());
 
 		Set<Object> keys = (Set<Object>) exec.getAttribute(SourceKeysTask.RESULT_KEY);
 		if (keys == null) {
@@ -52,4 +67,5 @@ public class MissingTargetsFilterStage<T> {
 
 		return keys;
 	}
+
 }
